manifest/h1service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-nodeport
spec:
  type: ClusterIP
  selector:
    app: wil-app
  ports:
  - port: 80
    targetPort: 8888
